<resources>
    <string name="app_name">Maraeena</string>
    <string name="type_name">type name</string>

    <string name="welcome_in_maraiina">Welcome in application Maraiina</string>
    <string name="choose_country">Choose the country</string>
    <string name="continue_to_app">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_offers">New Products</string>

    <string name="doUwantCook">Do you want to cook ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_weight">Choose weight</string>
    <string name="choose_age">Choose age</string>
    <string name="total_price">price</string>
    <string name="receive_order_in">Receive order in</string>
    <string name="hours_num">%1$d hours</string>
    <string name="fees">%1$d AED</string>
    <string name="fees_with_count">%1$d AED X %2$d</string>

    <string name="english">English</string>
    <string name="arabic">اللغة العربية</string>
    <string name="desc">description</string>
    <string name="Loading">Loading</string>
    <string name="CookingMethod">Cooking Method</string>
    <string name="CuttingMethod">Cutting Method</string>
    <string name="PackagingMethod">Packaging Method</string>
    <string name="addDeliveryDetails">Add delivery details</string>
    <string name="hint_name">Name</string>
    <string name="hint_name_customer">Name <font color='#FF0000'>*</font></string>
    <string name="mandatory">Mandatory</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_phone_customer">Phone Number<font color='#FF0000'>*</font></string>
    <string name="hint_address">Address Details</string>
    <string name="hint_address_customer">Address Details<font color='#FF0000'>*</font></string>
    <string name="choose_city">Choose City</string>
    <string name="hint_subject">Subject</string>
    <string name="order_details">Order details</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="details">Details</string>
    <string name="send">Send</string>
    <string name="drawer_item_complains_and_suggestions">Feedback</string>
    <string name="thank_you">Thank you</string>
    <string name="not_valid_email">Not valid email</string>
    <string name="wrong_number">Not valid phone</string>
    <string name="two_hours">2 hours</string>
    <string name="four_hours">4 hours</string>
    <string name="your_ref_no">Your reference number is</string>

    <string name="about_title">Green Island Livestock and Sheep Trading</string>

    <string name="about_vision">VISION</string>
    <string name="about_vision_details">Green Island to achieved goal of \"Safe Farm .. Safe Meat\" permanently .</string>

    <string name="about_mission">MISSION</string>
    <string name="about_mission_details">To provide the sale, import and export of livestock and sheep and slaoughterhouses management in the United Arab Emirates according to the highest standards of safety and sustainability,through continuous development and training.</string>

    <string name="about_slogan"></string>
    <string name="about_our_slogan">Safe Farm.. Safe Meat</string>

    <string name="about_agreement">We in Green Island strive to provide good service in the UAE with the highest standered of quality. We are committed to convert our vision into reality as an effective contribution in community service.</string>

    <string name="drawer_item_about">About us</string>
    <string name="drawer_item_contact">Contact us</string>
    <string name="distributionMethod">Distribution Method</string>
    <string name="hint_other_cutting_method">other</string>
    <string name="hint_email_customer">Email<font color='#FF0000'>*</font></string>
    <string name="choose_type">Choose type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="contact_address">Al Shahama Slaughterhouse</string>
    <string name="contact_number">+971&#8211;568888210 / +971&#8211;568888211</string>
    <string name="contact_email">www.maraeena.ae / info@maraeena.ae</string>
    <string name="contact_title">You can also send to us here</string>
    <string name="hint_subject_title">Subject</string>
    <string name="map_api_key" translatable="false">AIzaSyB9sfG4LNXZcqrKXk4HzNGGL_P9lztUBPM</string>
    <string name="done">Done</string>
    <string name="locate_address_on_map">Locate your address on Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_developed_by" translatable="false">This application developed by</string>
    <string name="app_developed_by_matteo" translatable="false">Developed By Matteo Works</string>
    <string name="matteo_works" translatable="false">Matteo Works</string>
    <!--
        <string name="phone_number_about_application" translatable="false">+971 52 272 3747</string>
    -->
    <string name="email_address_about_application" translatable="false">Email: info@matteoworks.com</string>
    <string name="website" translatable="false">www.matteoworks.com</string>
    <string name="drawer_item_about_application">About Application</string>
    <string name="dishes">dishes</string>
    <string name="we_will_contact_u">We will contact you soon</string>
    <string name="contact_u">We will contact you soon</string>
    <string name="press_on_map">Press on map to select your location</string>
    <string name="no_internet_connection">No Internet connection found. Check your connection or try again</string>

    <string name="warning">Are you sure you want to go back?</string>
    <string name="are_u_sure">If you go back, your orders will be deleted.</string>
    <string name="further_queries">For further queries, please be in touch with our customer care team.</string>
    <string name="try_again">Try Again</string>
    <string name="no_selected_orders">Sorry, There are no selected orders</string>
    <string name="error">Error</string>
    <string name="NoShoppingItems">No Orders</string>
    <string name="powered_by">Powered by green island</string>

    <string name="select_count">Select Count</string>

    <string name="confirmation">Confirmation</string>


    <string name="confirmationـrequest">Please  deposit  half  of  the  invoice  amount  on  the  account  shown  below:</string>
    <string name="account_bank_name">Company  name:  GREEN  ISLAND  LIVESTOCK  AND  SHEEP  TRADING</string>
    <string name="account_bank_number">Account number :</string>
    <string name="account_bank_number_value">019120025163</string>
    <string name="i_pan">IBAN  Number:</string>
    <string name="i_pan_value">AE330330000019120025163</string>
    <string name="swift">Swift  Code: </string>
    <string name="swift_number">BOMLAEAD</string>

    <string name="bank_name">Bank name : Mashreq bank</string>
    <string name="ok">Ok</string>
    <string name="other_comments">Other comments</string>


</resources>
