<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".views.AboutUsFragment"
    android:gravity="center">

    <include layout="@layout/header_main" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#88FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/desc"/>

            <com.nayra.maraiina.custom_views.MyBoldTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_horizontal"
                android:text="@string/about_title"
                android:textColor="@color/green_very_dark"
                android:textStyle="bold" />


            <com.nayra.maraiina.custom_views.MyBoldTextView
                android:id="@+id/tvVision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/about_vision"
                android:textColor="@color/green_very_dark"
                android:textStyle="bold" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/theVision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_vision_details" />

            <com.nayra.maraiina.custom_views.MyBoldTextView
                android:id="@+id/tvMission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/about_mission"
                android:textColor="@color/green_very_dark"
                android:textStyle="bold" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvTheMission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_mission_details" />

            <com.nayra.maraiina.custom_views.MyBoldTextView
                android:id="@+id/Slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/about_slogan"
                android:textColor="@color/green_very_dark"
                android:textStyle="bold" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvSlogan"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/about_our_slogan"
                android:textColor="@color/green_dark" />


            <com.nayra.maraiina.custom_views.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_agreement" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/imgInstgram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/instgram"
                    android:layout_margin="@dimen/_5sdp" />

                <ImageButton
                    android:id="@+id/imgTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/twitter"
                    android:layout_margin="@dimen/_5sdp" />

                <ImageButton
                    android:id="@+id/imgFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/facebook"
                    android:layout_margin="@dimen/_5sdp" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.nayra.maraiina.custom_views.MyTextView
        android:id="@+id/tv_website_matteo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_developed_by_matteo"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="@dimen/_5sdp" />
</LinearLayout>