<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ChooseCountryActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_logo"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_100sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_40sdp"
            android:contentDescription="@string/desc" />


        <com.nayra.maraiina.custom_views.MyTextView
            android:id="@+id/tv_choose_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_16sdp"
            android:text="@string/choose_city"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:textColor="@android:color/white" />


        <Spinner
            android:id="@+id/spCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_margin="@dimen/_5sdp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:prompt="@string/choose_country"
            android:spinnerMode="dropdown"
            android:layoutDirection="locale" />


        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/segmented2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_grey"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            app:sc_tint_color="@color/green_very_dark"
            segmentedgroup:sc_corner_radius="20dp">

            <RadioButton
                android:id="@+id/rb_en"
                style="@style/MyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:checked="true"
                android:background="@drawable/rb_selector" />

            <RadioButton
                android:id="@+id/rb_ar"
                style="@style/MyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:background="@drawable/rb_selector" />
        </info.hoang8f.android.segmented.SegmentedGroup>

        <com.nayra.maraiina.custom_views.MyButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/bg_green_very_dark_button"
            android:textColor="@android:color/white"
            android:text="@string/continue_to_app"
            android:textAllCaps="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zayed"
            android:contentDescription="@string/desc"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp" />
    </LinearLayout>
</ScrollView>