<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_5sdp"
    tools:context=".views.ReviewOrderDetailsActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical">

            <com.nayra.maraiina.custom_views.MyTextView
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/order_details"
                android:textColor="@color/grey_dark" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                android:textColor="@color/grey_dark" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_dark" />


            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvEmailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textColor="@color/grey_dark" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvEmailalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_dark" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvPhoneTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_phone"
                android:textColor="@color/grey_dark" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvPhoneValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_dark" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_address"
                android:textColor="@color/grey_dark" />

            <com.nayra.maraiina.custom_views.MyTextView
                android:id="@+id/tvAddressValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_green_light"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_5sdp">

                <com.nayra.maraiina.custom_views.MyTextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="تست"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/green_very_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.nayra.maraiina.custom_views.MyTextView
                        android:id="@+id/tv_total_price"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/total_price"
                        android:textColor="@color/green_very_dark"
                        android:textStyle="bold" />

                    <com.nayra.maraiina.custom_views.MyTextView
                        android:id="@+id/tv_total_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        tools:text="@string/fees" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.nayra.maraiina.custom_views.MyTextView
                        android:id="@+id/tv_delivery"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/contact_u"
                        android:textColor="@color/green_very_dark"
                        android:textStyle="bold" />

                    <com.nayra.maraiina.custom_views.MyTextView
                        android:id="@+id/tv_delivery_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        tools:text="@string/hours_num" />

                </LinearLayout>

            </LinearLayout>

            <com.nayra.maraiina.custom_views.MyButton
                android:id="@+id/btConfirmOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_order"
                android:background="@drawable/bg_green_very_dark_button"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>